<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan User</string>
    <string name="user_name">Nama User</string>
    <string name="detail_name">Nama</string>
    <string name="detail_user_name">Username User</string>
    <string name="detail_followers">Followers</string>
    <string name="detail_following">Following</string>
    <string name="followers_fragment">Followers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="saklar">Switch</string>
</resources>